- Adjustments to scrollbars in different browsers - Adjustments to decimal places - Bugfix: Now you cannot select the same currency in both selections.

--- a/src/problem2/fancy-form/src/index.css
+++ b/src/problem2/fancy-form/src/index.css
@@ -46,3 +46,31 @@ input[type="number"] {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+/* Style the scrollbar track */
+::-webkit-scrollbar {
+  width: 2px; /* Width of the scrollbar */
+  height: 2px; /* Height of the scrollbar */
+  opacity: 50%; 
+}
+
+/* Style the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color of the scrollbar thumb */
+  border-radius: 10px; /* Rounded corners */
+}
+
+/* Style the scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Darker color on hover */
+}
+
+/* Style the scrollbar track */
+::-webkit-scrollbar-track {
+  background: none; /* Background color of the scrollbar track */
+  border-radius: 10px; /* Rounded corners */
+}
+
+::-webkit-scrollbar-track:hover {
+  background: #333; /* Change color on hover */
+}
